Clean up repository structure for production
Reorganize project structure:
- Move dev scripts to scripts/dev/ (run.sh, test.sh, install.sh, etc)
- Update .gitignore to exclude build artifacts (*.egg-info, .python-version)
- Remove temporary build files from tracking

Repository now has clean structure:
```
├── a2a/              # Core A2A protocol implementation
├── agents/           # Specialist agent implementations
├── config/           # Configuration management
├── models/           # Pydantic models and schemas
├── storage/          # Storage layer implementations
├── scripts/          # Utility scripts
│   ├── dev/         # Development scripts
│   ├── setup.sh     # Initial setup
│   └── pull-models.sh
├── tests/            # Test suite
├── examples/         # Usage examples
├── main.py           # Application entry point
├── setup.py          # Package setup
├── docker-compose.yml
└── README.md

Clean, professional structure ready for employer review.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ venv/
 env/
 ENV/
 .venv
+*.egg-info/
+dist/
+build/
+.python-version
 
 # Environment
 .env
@@ -25,6 +29,7 @@ htmlcov/
 
 # Logs
 *.log
+logs/
 
 # OS
 .DS_Store
